tests/integration/errors/test_modifier_static_toplevel.sn
# Test: Compile error - 'static' used at top-level (only valid in struct methods)

static fn helper(): int =>
    return 42

fn main(): void =>
    var x: int = helper()
    print($"{x}\n")
